# DNS-Monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dnsmonitor/: __init__.py  cache.py  cli.py  config.py  constants.py  monitor.py  packet.py  pcapy_mock.py  resolver.py  traffic.py
src/dnsmonitor/utils/: __init__.py  colors.py  common.py  logger.py  network.py
